--- a/Evidencija krvnog pritiska/css/style.css
+++ b/Evidencija krvnog pritiska/css/style.css
@@ -1241,6 +1241,8 @@ body {
     color: var(--text-secondary);
     font-size: 0.875rem;
     margin: 0;
+    text-align: center;
+    width: 100%;
 }
 
 /* Dark mode footer */
